# poteto-monitor

./: .gitignore  LICENSE  README.md  config.example.json  install.sh  monitor.py  poteto-monitor-web.service  poteto-monitor.service  poteto-monitor.timer  pyproject.toml  requirements.txt
poteto_monitor/: __init__.py  __main__.py  config.py  format.py  models.py  monitor.py  notify.py  providers.py  storage.py
poteto_monitor/web/: __init__.py  context.py  poller.py  server.py  state.py
poteto_monitor/web/static/: app.js  index.html  styles.css
tests/: test_monitor.py  test_web.py
